minor changes for exact replica

--- a/Mountains.html
+++ b/Mountains.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -29,8 +32,8 @@
                                     <li> <a href="#">Sermons</a></li>
                                     <li><a href="#">Single</a></li>
                                     <li class="drop-subdis">
-                                        <a href="#">Dropdown</a>
-                                        <i class="fa-solid fa-chevron-right"></i>
+                                        <a href="#">Dropdown <i class="fa-solid fa-chevron-right"></i></a>
+
                                         <div class="sub-dropdown">
                                             <ul>
                                                 <li><a href="#"> Sub Menu One</a></li>
@@ -51,13 +54,13 @@
             <!-- banner section -->
             <div class="banner">
                 <div class="banner-left">
-                    <div><span>Welcome to Byfaith church</span></div>
+                    <div><span>Welcome to Byfaith church</span> </div>
                     <div>
                         <h1 class="banner-heading para"><b>Oh Safe To the Rock That Is Higher Than I</b></h1>
                     </div>
                     <div>
                         <p class="para2">Far far away, behind the word mountains, far from the countries Vokalia and
-                            Consonantia, there live the blind texts.</p>
+                            Consonantia, there live the blind<br> texts.</p>
                     </div>
                     <div><button><a><b>go to sermons</b></a></button></div>
 
@@ -73,25 +76,29 @@
     <!--section-2-->
     <section class="main container topsection">
         <div class="main-left">
-            <span class="col-ye">ABOUT US</span>
-            <h2 class="banner-heading col-blc"><b>Living and Sharing <br> The Gospel</b></h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
+            <div><span class="head">ABOUT US</span></div>
+            <h2 class="banner-heading col-blc mb-2"><b>Living and Sharing <br> The Gospel</b></h2>
+            <p class="mb-1">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                there live the
                 blind<br>texts.</p>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-                paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p class="mb-4">A small river named Duden flows by their place and <br> supplies it with the necessary
+                regelialia. It is a <br>
+                paradisematic country, in which roasted parts of <br> sentences fly into your mouth.</p>
             <div>
-                <button><a><b> know more about us</b></a></button>
+                <button><a>know more about us</a></button>
             </div>
         </div>
         <div></div>
-        <div class="main-right"><img src="./All_Images/book.webp" alt="open book" height="90%" width="100%"></div>
+        <div class="main-right">
+            <img src="./All_Images/book.webp" alt="open book" height="100%" width="100%">
+        </div>
     </section>
 
     <!--section-3-->
     <section class="content container topsection">
         <div class="content-top">
-            <span class="col-ye">SERMONS</span>
-            <h2 class="col-blc banner-heading"><b>Recent Sermons</b></h2>
+            <div class="mb-2"><span class="head">SERMONS</span></div>
+            <h2 class="col-blc banner-heading mb-2"><b>Recent Sermons</b></h2>
         </div>
         <div class="content-bottom">
             <div><img src="./All_Images/hand_book.webp" alt="hand book" height="100%" width="100%"></div>
@@ -102,9 +109,10 @@
                 <div class="content-card">
                     <div class="cardone">
                         <span>15 Jan 2020 <span class="card">•</span>By Pastor Campbell</span>
-                        <h3 class="col-blc">Living and Sharing The Gospel</h3>
+                        <h3 class=" fs"><a class="col-blc">Living and Sharing The Gospel</a></h3>
                     </div>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                    <p class="mb-5">Far far away, behind the word mountains, far from <br>the countries Vokalia and
+                        Consonantia</p>
                 </div>
                 <button><a><b>read more</b> </a></button>
             </div>
@@ -112,11 +120,12 @@
                 <div class="content-card">
                     <div class="cardone">
                         <span>15 Jan 2020 <span class="card">•</span>By Pastor Campbell</span>
-                        <h3 class="col-blc">Living and Sharing The Gospel</h3>
+                        <h3 class="col-blc fs">Living and Sharing The Gospel</h3>
                     </div>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                    <p class="mb-5">Far far away, behind the word mountains, far from <br> the countries Vokalia and
+                        Consonantia</p>
                 </div>
-                <button><a><b>read more</b> </a></button>
+                <button><a><b>read more</b></a></button>
             </div>
             <div>
                 <div class="content-card">
@@ -124,7 +133,8 @@
                         <span>15 Jan 2020 <span class="card">•</span>By Pastor Campbell</span>
                         <h3 class="col-blc">Living and Sharing The Gospel</h3>
                     </div>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                    <p class="mb-5">Far far away, behind the word mountains, far from <br> the countries Vokalia and
+                        Consonantia</p>
                 </div>
                 <button><a><b>read more</b> </a></button>
             </div>
@@ -135,7 +145,7 @@
     <article class="topsection">
         <section class="container article ">
             <div>
-                <span class="col-ye">WHY US</span>
+                <span class="head">Why us</span>
                 <h2 class="banner-heading col-whi mt-5">You matter to God, you<br> matter to us.</h2>
             </div>
             <div class="article-two">
@@ -144,28 +154,32 @@
                     the Semantics, a large language ocean.</p>
             </div>
             <div class="article-three">
-                <img src="./All_Images/hand_book.webp" alt="hand on book" height="70%" width="100%">
+                <img src="./All_Images/hand_book.webp" alt="hand on book" height="75%" width="95%">
                 <div class="paly-icon2"><i class="fa-solid fa-play fa-2xl"></i></div>
             </div>
             <div class="article-four">
                 <div class="artiacl-right">
                     <h4 class="col-whi">PEACE WITH GOD</h4>
-                    <p class="mt-5">Far far away, behind the word mountains, far from the countries Vokalia and
+                    <p class="mt-5 col-whi-op">Far far away, behind the word mountains, far from the countries Vokalia
+                        and
                         Consonantia.</p>
                 </div>
                 <div class="artiacl-right">
                     <h4 class="col-whi">RELATIONSHIP FOR THE SOUL</h4>
-                    <p class="mt-5">Far far away, behind the word mountains, far from the countries Vokalia and
+                    <p class="mt-5 col-whi-op">Far far away, behind the word mountains, far from the countries Vokalia
+                        and
                         Consonantia.</p>
                 </div>
                 <div class="artiacl-right1">
                     <h4 class="col-whi">IDENTIFYING LIMITATIONS</h4>
-                    <p class="mt-5">Far far away, behind the word mountains, far from the countries Vokalia and
+                    <p class="mt-5 col-whi-op">Far far away, behind the word mountains, far from the countries Vokalia
+                        and
                         Consonantia.</p>
                 </div>
                 <div class="artiacl-right1">
                     <h4 class="col-whi">HIS KINGDOM</h4>
-                    <p class="mt-5">Far far away, behind the word mountains, far from the countries Vokalia and
+                    <p class="mt-5 col-whi-op">Far far away, behind the word mountains, far from the countries Vokalia
+                        and
                         Consonantia.</p>
                 </div>
                 <div class="artiacl-button">
@@ -178,8 +192,8 @@
     <!-- section-5 -->
     <section class="topsection test-sec">
         <div class="content-top">
-            <span class="col-ye">TESTIMONIALS</span>
-            <h2 class="col-blc banner-heading"><b>Living Testimonies</b></h2>
+            <span class="head">TESTIMONIALS</span>
+            <h2 class="col-blc banner-heading mb-2 mt-5"><b>Living Testimonies</b></h2>
         </div>
         <div class="col-blc testimonies">
             <div class="test-card">
@@ -215,27 +229,27 @@
     </section>
     <!-- section-6 -->
     <section class="topsection services">
-        <div class="content-top">
-            <span class="col-ye">OUR SERVICES</span>
+        <div class="content-top pt-5">
+            <div class="mb-4"> <span class="head">OUR SERVICES</span> </div>
             <h2 class="col-blc banner-heading"><b>Church Services</b></h2>
         </div>
         <div class="service-desc">
             <div>
-                <img src="./All_Images/wheat.png" alt="wheat">
+                <img class="mb-2" src="./All_Images/wheat.png" alt="wheat">
                 <h3 class="col-blc">Praise and Worship</h3>
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
                     the blind texts.</p>
                 <p class="more">+ Read more</p>
             </div>
             <div>
-                <img src="./All_Images/church.png" alt="wheat">
+                <img class="mb-2" src="./All_Images/church.png" alt="wheat">
                 <h3 class="col-blc">Praise and Worship</h3>
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
                     the blind texts.</p>
                 <p class="more">+ Read more</p>
             </div>
             <div>
-                <img src="./All_Images/bible.png" alt="wheat">
+                <img class="mb-2" src="./All_Images/bible.png" alt="wheat">
                 <h3 class="col-blc">Praise and Worship</h3>
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
                     the blind texts.</p>
@@ -293,12 +307,12 @@
                     <li><a href="#">Contact us</a></li>
                 </ul>
                 <ul class="social-icon">
-                    <li><a href="#"> <i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"> <i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="#"> <i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li><a href="#"> <i class="fa-brands fa-pinterest"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
+                    <li><a href="#" class="abc"> <i class="fa-brands fa-instagram"></i></a></li>
+                    <li> <a href="#" class="abc"> <i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#" class="abc"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="#" class="abc"> <i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a href="#" class="abc"> <i class="fa-brands fa-pinterest"></i></a></li>
+                    <li><a href="#" class="abc"><i class="fa-brands fa-dribbble"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -308,5 +322,6 @@
         </div>
     </footer>
 </body>
+<!-- second -->
 
 </html>
